--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,5 @@ baseurl: "/public_docs" # the subpath of your site, e.g. /blog
 markdown: kramdown
 description: This is the hub for Findmypast's API documentation
 theme: minima
+
+permalink: /:title/
